--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.5.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.0"
+    "typescript": "^4.9.0",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI=false react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "npm run build"
   },
   "eslintConfig": {
     "extends": [
