--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@types/node": "^16.18.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "ajv": "^8.17.1",
-    "framer-motion": "^10.16.0",
-    "lucide-react": "^0.292.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-intersection-observer": "^9.5.0",
-    "react-scripts": "^5.0.1",
-    "typescript": "^4.9.0",
-    "web-vitals": "^2.1.4"
+    "@types/node": "16.18.0",
+    "@types/react": "18.2.0",
+    "@types/react-dom": "18.2.0",
+    "ajv": "8.17.1",
+    "framer-motion": "10.16.0",
+    "lucide-react": "0.292.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-intersection-observer": "9.5.0",
+    "react-scripts": "5.0.1",
+    "typescript": "4.9.0",
+    "web-vitals": "2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,9 +41,9 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0",
-    "tailwindcss": "^3.3.0"
+    "autoprefixer": "10.4.0",
+    "postcss": "8.4.0",
+    "tailwindcss": "3.3.0"
   },
   "engines": {
     "node": "18.x"
